<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#e4e3e3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.profile.FasilitasActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_cardview1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lab_komputer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/iv_cardview1"
                        android:layout_centerHorizontal="true"
                        android:text="LAB KOMPUTER"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_cardview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_cardview1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/fasilitas_lab_komputer"
                        android:textColor="@color/black"
                        android:textSize="11sp" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_cardview2"
                        android:src="@drawable/perpustakaan"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />
                    <TextView
                        android:text="PERPUSTAKAAN"
                        android:textColor="#FFFFFF"
                        android:layout_alignBottom="@id/iv_cardview2"
                        android:layout_centerHorizontal="true"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_cardview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_cardview2"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/fasilitas_perpustakaan"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_cardview3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lab_ipa" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/iv_cardview3"
                        android:layout_centerHorizontal="true"
                        android:text="LAB IPA"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_cardview3"
                        android:text="@string/fasilitas_lab_ipa"
                        android:layout_margin="16dp"
                        android:textSize="11sp"
                        android:layout_below="@id/iv_cardview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_cardview4"
                        android:src="@drawable/masjid"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />
                    <TextView
                        android:text="MASJID"
                        android:textColor="#FFFFFF"
                        android:layout_alignBottom="@id/iv_cardview4"
                        android:layout_centerHorizontal="true"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_cardview4"
                        android:text="@string/fasilitas_masjid"
                        android:layout_margin="16dp"
                        android:textSize="11sp"
                        android:textColor="@color/black"
                        android:layout_below="@id/iv_cardview4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>